# Agente-Productos-BD

./: .env.copy  .gitignore  docker-compose.yml  main.py  pyproject.toml
Databases/: Productos.db  migration.sql  seeding.sql
app/: AgenteConsultasBD.ipynb  MigrarPoblarDB.ipynb
