[project]
name = "agente-productos-bd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.5",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
]
